--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -12,6 +12,13 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: Install Vulkan SDK
+      # You may pin to the exact commit or the version.
+      # uses: humbletim/install-vulkan-sdk@6aadcb709dbb8e4096dad20e35adaefec83d4b45
+        uses: humbletim/install-vulkan-sdk@v1.1.1
+        with:
+          # official Vulkan SDK release version to use
+          version: default
       - name: "Setup"
         run: |
           gcc --version
