--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -18,7 +18,7 @@ jobs:
         uses: humbletim/install-vulkan-sdk@v1.1.1
         with:
           # official Vulkan SDK release version to use
-          version: default
+          version: 1.3.275.0
       - name: "Setup"
         run: |
           gcc --version
