--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -21,8 +21,5 @@ jobs:
           version: 1.3.275.0
       - name: "Setup"
         run: |
-          gcc --version
-          ls
-          pwd
-          cd ..
-          ls
+          dir
+          dir ..
