--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -8,9 +8,6 @@ jobs:
   test:
     name: MinGW GC
     runs-on: windows-2019
-    defaults:
-      run:
-        shell: bash
     steps:
       - name: Install Vulkan SDK
       # You may pin to the exact commit or the version.
@@ -19,14 +16,11 @@ jobs:
         with:
           # official Vulkan SDK release version to use
           version: 1.3.275.0
+      - name: Install MinGW
+      # You may pin to the exact commit or the version.
+      # uses: egor-tensin/setup-mingw@84c781b557efd538dec66bde06988d81cd3138cf
+        uses: egor-tensin/setup-mingw@v2
       - name: "Setup"
         run: |
-          pacman -Syu git make mingw-w64-x86_64-SDL2 mingw-w64-x86_64-cmake mingw-w64-x86_64-python-pip mingw-w64-x86_64-qt5 mingw-w64-x86_64-toolchain autoconf libtool automake-wrapper --noconfirm
-          echo 'PATH=/mingw64/bin:$PATH' >> ~/.bashrc
-          echo 'PATH=$(readlink -e /c/VulkanSDK/*/Bin/):$PATH' >> ~/.bashrc
-          git clone https://github.com/tr1fled/sooyoo
-          cd sooyoo
-          mkdir build && cd build
-          cmake -G "MSYS Makefiles" -DSUYU_USE_BUNDLED_VCPKG=ON -DSUYU_TESTS=OFF ..
-          make -j$(nproc)
+          bash
 
