--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install MinGW
       # You may pin to the exact commit or the version.
       # uses: egor-tensin/setup-mingw@84c781b557efd538dec66bde06988d81cd3138cf
-        uses: egor-tensin/setup-mingw@v2
+        uses: e-t-l/setup-mingw@patch-1
       - name: "Setup"
         run: |
           bash
