--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -16,11 +16,11 @@ jobs:
         with:
           # official Vulkan SDK release version to use
           version: 1.3.275.0
+        
       - name: Install MinGW
-      # You may pin to the exact commit or the version.
-      # uses: egor-tensin/setup-mingw@84c781b557efd538dec66bde06988d81cd3138cf
         uses: e-t-l/setup-mingw@patch-1
+        
       - name: "Setup"
         run: |
-          bash
+          bash -c 'ls'
 
