--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -21,6 +21,8 @@ jobs:
         uses: e-t-l/setup-mingw@patch-1
         
       - name: "Setup"
+        shell:
+          bash
         run: |
-          bash -c 'ls'
+          pacman -Syu git make mingw-w64-x86_64-SDL2 mingw-w64-x86_64-cmake mingw-w64-x86_64-python-pip mingw-w64-x86_64-qt5 mingw-w64-x86_64-toolchain autoconf libtool automake-wrapper --noconfirm
 
