--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -22,4 +22,11 @@ jobs:
         
       - name: "Setup"
         run: |
-          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash sooyoo/buildscript.sh
+          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash pacman -Syu git make mingw-w64-x86_64-SDL2 mingw-w64-x86_64-cmake mingw-w64-x86_64-python-pip mingw-w64-x86_64-qt5 mingw-w64-x86_64-toolchain autoconf libtool automake-wrapper --noconfirm \
+          echo 'PATH=/mingw64/bin:$PATH' >> ~/.bashrc \
+          echo 'PATH=$(readlink -e /c/VulkanSDK/*/Bin/):$PATH' >> ~/.bashrc \
+          git clone https://github.com/tr1fled/sooyoo.git \
+          cd sooyoo \
+          mkdir build && cd build \
+          cmake -G "MSYS Makefiles" -DSUYU_USE_BUNDLED_VCPKG=ON -DSUYU_TESTS=OFF .. \
+          make -j$(nproc) 
