--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -22,4 +22,5 @@ jobs:
         
       - name: "Setup"
         run: |
-          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash git clone https://github.com/tr1fled/sooyoo.git && cd sooyoo && ./buildscript.sh
+          git clone https://github.com/tr1fled/sooyoo.git
+          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash ls && cd sooyoo && ./buildscript.sh
