--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     name: MinGW GC
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Install Vulkan SDK
       # You may pin to the exact commit or the version.
