--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -23,4 +23,4 @@ jobs:
       - name: "Setup"
         run: |
           git clone https://github.com/tr1fled/sooyoo.git
-          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash dir && cd sooyoo && ./buildscript.sh
+          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash sooyoo/buildscript.sh
