--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -21,21 +21,9 @@ jobs:
       - name: Install MinGW
         uses: e-t-l/setup-mingw@patch-1
         
-      - name: "Setup"
-        run: |
-      #    git clone --recursive https://github.com/tr1fled/sooyoo.git
-      #    C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash sooyoo/buildscript.sh
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: "Setup, Build & Publish"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: windows
-          release_name: Automated release
-          body: |
-            Powered by GitHub Actions.
-          draft: false
-          prerelease: false
+          GITHUB_TOKEN: ${{ github.TOKEN }}
+        run: |
+          git clone --recursive https://github.com/tr1fled/sooyoo.git
+          C:\msys64\msys2_shell.cmd -mingw64 -defterm -here -full-path -no-start -shell bash sooyoo/buildscript.sh
